# tgt_practice_backend

./: Dockerfile  README.md  auto-config.json  docker-compose.yml  manage.py  nginx.conf  pyproject.toml
.github/workflows/: lint_and_format.yml
api/: admin.py  converter.py  inputs.py  models.py  payloads.py  schema.py  types.py  views.py
api/graphql/: connections.py  conversion_utils.py  decorators.py  mutation.py  payloads.py  queries.py  types.py
api/graphql/inputs/: tool_installed_sensor.py  tool_module.py  tool_module_group.py  tool_module_type.py
api/graphql/mutations/: tool_installed_sensor.py  tool_module.py  tool_module_group.py  tool_module_type.py  tool_sensor_type.py
api/management/commands/: add_base_data.py  add_unit_system_data.py  delete_data.py
api/management/data/: converting_json_script.py  converting_script.py  generate_data.py  tool_installed_sensor.json  tool_module.json
api/management/data/Base/: parameter.json  parameter_type.json
api/management/data/Large/: sensor_large.json  tool_module_large.json
api/migrations/: 0001_initial.py
api/models/: __init__.py  sensor_models.py  tool_models.py  unit_system_models.py  user_models.py
nginx/: Dockerfile  default.conf
tools_app/: asgi.py  settings.py  urls.py  wsgi.py
