[tool.poetry]
name = "tgt-practice-backend"
version = "0.1.0"
description = "Dashboard for TGT Practice"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
django-cors-headers = "^4.3.1"
black = "^24.4.0"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
graphene-django = "^3.2.1"
django-filter = "^24.2"

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__"
]
extend-ignore = [
    "E501"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
